[gd_scene load_steps=11 format=3 uid="uid://b6qy0uoifxeby"]

[ext_resource type="Script" uid="uid://sgb13e0g6d4h" path="res://scenes/dice/dice.gd" id="1_ws0no"]
[ext_resource type="PackedScene" uid="uid://cbwouu0vicqix" path="res://scenes/dice/side/side.tscn" id="2_2tv1o"]
[ext_resource type="Texture2D" uid="uid://bytb1t811lcmu" path="res://assets/CREST_MOVEMENT.svg" id="3_5157l"]
[ext_resource type="Texture2D" uid="uid://bj26qmxnebta" path="res://assets/CREST_ATTACK.svg" id="4_w0qrj"]
[ext_resource type="Texture2D" uid="uid://r8b3kacabv2e" path="res://assets/CREST_DEFENSE.svg" id="5_65ktn"]
[ext_resource type="Texture2D" uid="uid://dsl2unxii3mi7" path="res://assets/CREST_MAGIC.svg" id="6_60uon"]
[ext_resource type="PackedScene" uid="uid://b1qptgwxay546" path="res://scenes/dungobj/summon/summon.tscn" id="7_2tv1o"]

[sub_resource type="BoxMesh" id="BoxMesh_lbo6s"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ws0no"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_fl3nv"]

[node name="Dice" type="RigidBody3D"]
inertia = Vector3(0.17, 0.17, 0.17)
script = ExtResource("1_ws0no")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_lbo6s")
surface_material_override/0 = SubResource("StandardMaterial3D_ws0no")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_fl3nv")

[node name="Sides" type="Node3D" parent="."]

[node name="Side1" parent="Sides" instance=ExtResource("2_2tv1o")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.51, 0)
mult = 4

[node name="Side2" parent="Sides" instance=ExtResource("2_2tv1o")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -0.51)
texture = ExtResource("3_5157l")
type = "MOVEMENT"

[node name="Side3" parent="Sides" instance=ExtResource("2_2tv1o")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.51, 0, 0)
texture = ExtResource("3_5157l")
type = "MOVEMENT"
mult = 2

[node name="Side4" parent="Sides" instance=ExtResource("2_2tv1o")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.51, 0, 0)
texture = ExtResource("4_w0qrj")
type = "ATTACK"
mult = 4

[node name="Side5" parent="Sides" instance=ExtResource("2_2tv1o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.51)
texture = ExtResource("5_65ktn")
type = "DEFENSE"

[node name="Side6" parent="Sides" instance=ExtResource("2_2tv1o")]
transform = Transform3D(-1, -8.74228e-08, 3.82137e-15, 0, -4.37114e-08, -1, 8.74228e-08, -1, 4.37114e-08, 0, -0.51, 0)
texture = ExtResource("6_60uon")
type = "MAGIC"

[node name="Summon" parent="." instance=ExtResource("7_2tv1o")]
